k8s/platform/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dagster
  labels:
    app: dagster
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/instance: "data"
    gethomepage.dev/name: "Dagster"
    gethomepage.dev/description: "Data Pipeline Orchestrator"
    gethomepage.dev/group: "Data Pipelines"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/dagster-dark.png"
    gethomepage.dev/href: "http://dagster.talos00"
    gethomepage.dev/siteMonitor: "http://dagster-webserver.catalyst-data.svc.cluster.local:3000"
    gethomepage.dev/weight: "1"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dagster.talos00`)
      kind: Rule
      services:
        - name: dagster-webserver
          port: 3000
